Final Scenario Touches

--- a/0. 489_Homework_1.ipynb
+++ b/0. 489_Homework_1.ipynb
@@ -12,18 +12,20 @@
     "\n",
     "Homework: Initial Python\n",
     "\n",
-    "Task 1: Create four Python variables with different data types:"
+    "Task 1: Create four Python variables with different data types:\n",
+    "----"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 59,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import math\n",
     "import random\n",
     "\n",
     "names     = [\"Bob\", \"Jill\", \"George\", \"Anne\"] # String\n",
@@ -46,13 +48,14 @@
    "metadata": {},
    "source": [
     "Task 2: Create a Python list containing 5 numeric variables:\n",
+    "----\n",
     "\n",
     "Note: I know this is extra. I was just having fun. I created a function to generate everyone's 5 year salary outlook."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -107,13 +110,14 @@
    "metadata": {},
    "source": [
     "Task 3: Perform an arithmetic operation on a subset of elements in this list:\n",
+    "----\n",
     "\n",
     "Note: So, what I'll do now is assume that every other year, everyone gets a bonus!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +166,10 @@
     "Cool! So now you can see, on \"even\" years (if counting from year of employment 1...) everyone got bonuses!\n",
     "\n",
     "Task 4: Create a Python list containing 3 string values\n",
+    "----\n",
+    "\n",
     "Task 5: Append 2 more strings to the end of this python list\n",
+    "----\n",
     "\n",
     "To address this, I've already got the list of names of people. In order to satisfy these requirements, I'll add two more people.\n",
     "\n",
@@ -171,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -231,13 +238,14 @@
    "metadata": {},
    "source": [
     "Task 6: Combine your two Python lists into a single two-dimensional list.\n",
+    "----\n",
     "\n",
     "Alright, so you decide you want a matrix of just salary outlook data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -272,12 +280,28 @@
    "source": [
     "Now, to augment this new data, the boss decides he wants to add a yearly five thousand dollar buffer on the top of those employees that are given a retirement by the company in order to represent company contributions to 401k and retirement options.\n",
     "\n",
-    "To do this, I'll write a function."
+    "To do this, I'll write a function.\n",
+    "Task 7: Use any five Python functions:\n",
+    "----\n",
+    "    - 1) calculate_half_decade()\n",
+    "    - 2) print_salary()\n",
+    "    - 3) insert_raise()\n",
+    "    - 4) retirement_cost()\n",
+    "    - 5) sum()\n",
+    "    \n",
+    "Task 8: Use any five Python methods:\n",
+    "----\n",
+    "    - 1) np.zeros()\n",
+    "    - 2) variable.append()\n",
+    "    - 3) \" \".join(variable)\n",
+    "    - 4) random.choice(names)\n",
+    "    - 5) random.random()\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -389,14 +413,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average (and more appropriately scaled) Employee Bonus: \n",
+      "Scaled Employee Bonus: \n",
       "[  50.97560933   33.54671933   69.2569321    27.37995317    0.          100.        ]\n"
      ]
     }
@@ -423,25 +447,27 @@
     "\n",
     "Finally, the boss decides it's time to give back. \n",
     "\n",
-    "In order to do this, he's requested you randomly select someone to recieve a $5,000 one-time bonus. Rather than do it manually, you decide it'd be a bit of fun to let the random number generator decide.\n",
+    "In order to do this, he's requested you randomly select someone to recieve a one-time bonus between 2,500 and 5,000 dollars. Rather than do it manually, you decide it'd be a bit of fun to let the random number generator decide.\n",
     "\n",
     "As a final note, your boss adds that he wants their index to be less than 50; he wants to help where it's needed."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "And the winner is: Anne!\n",
-      "Anne had a bonus index of: 27.3799531686\n",
-      "Anne also had an average yearly cost of: 58608.5477002\n",
-      "Anne has a raise percentile of: 1.2\n",
-      "Anne gets a yearly bonus of: 1400\n"
+      "And the winner is: Jill!\n",
+      "They won: 3561.10 dollars!\n",
+      "\n",
+      "Jill has a bonus index of          : 33.55\n",
+      "Jill has an average yearly cost of : 50683.69\n",
+      "Jill has a raise percentile of     : 1.5\n",
+      "Jill gets a yearly bonus of        : 1200\n"
      ]
     }
    ],
@@ -452,34 +478,125 @@
     "    while winner_index > threshold:\n",
     "        winner = random.choice(names)\n",
     "        winner_index = index[name_dict[str(winner)]]\n",
-    "    return winner\n",
+    "    prize  = 2500 + random.random() * 2500\n",
+    "    return winner, prize\n",
     "\n",
-    "winner = generate_winner(names, scaled_benefits, 50.)\n",
+    "winner, prize = generate_winner(names, scaled_benefits, 50.)\n",
     "print(\"And the winner is: \" + str(winner) + \"!\")\n",
-    "print(str(winner) + \" had a bonus index of: \" + str(scaled_benefits[name_dict[str(winner)]]))\n",
-    "print(str(winner) + \" also had an average yearly cost of: \" + str(yearly_cost[name_dict[str(winner)]]))\n",
-    "print(str(winner) + \" has a raise percentile of: \" + str(raise_p[name_dict[str(winner)]]))\n",
-    "print(str(winner) + \" gets a yearly bonus of: \" + str(bonus[name_dict[str(winner)]]))"
+    "print(\"They won: %.2f dollars!\\n\" % prize)\n",
+    "\n",
+    "# Float formatting\n",
+    "print(str(winner) + \" has a bonus index of          : %.2f\" % scaled_benefits[name_dict[winner]])\n",
+    "print(str(winner) + \" has an average yearly cost of : %.2f\" % yearly_cost[name_dict[winner]])\n",
+    "\n",
+    "# String casting\n",
+    "print(str(winner) + \" has a raise percentile of     : \" + str(raise_p[name_dict[str(winner)]]))\n",
+    "print(str(winner) + \" gets a yearly bonus of        : \" + str(bonus[name_dict[str(winner)]]))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, outlook_prediction is a 2D matrix where the dimensions are m (person) and n (year)\n",
+    "Task 9: Create a two-dimensional NumPy array and print a subset of its rows and columns\n",
+    "----\n",
     "\n",
-    "Task 7: Use any five Python functions:\n",
-    "    1) calculate_half_decade()\n",
-    "    2) print_salary()\n",
-    "    3) insert_raise()\n",
-    "    4) retirement_cost()\n",
-    "    5) sum()\n",
-    "    \n",
-    "Task 8: Use any five Python methods:\n",
-    "    1) np.zeros()\n",
-    "    2) variable.append()\n",
-    "    3) \" \".join(variable)\n",
-    "    4) random.choice(names)"
+    "So the boss sees that Jill has won 3561.10 and is feeling extra generous. He'd like to give the remaining 1438.9 to the person with the lowest bonus compensation percentile to try and spread the wealth. The boss requests that you locate that person and bring him their file.\n",
+    "\n",
+    "Note: The subset that's being printed is the row containing the lowest bonus earner, and all columns within the row being printed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Employee Name      : Eric\n",
+      "Employee Pay       : 15500.00\n",
+      "Employee Five-Year : [ 15500.00, 15700.00, 15500.00, 15700.00, 15500.00,]\n",
+      "Employee Bonus     : 200.00\n",
+      "Employee Raise Pct : 1.00\n",
+      "Employee Benefit   : 0.00 / 100\n",
+      "Employee Retirement: False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def find_min_location(percentiles):\n",
+    "    min_i = 0\n",
+    "    for i in range(len(percentiles)):\n",
+    "        if percentiles[min_i] > percentiles[i]:\n",
+    "            min_i = i\n",
+    "    return min_i\n",
+    "\n",
+    "def print_user(ID, names, salaries, salary_p, bonus, retire, raise_p, benefits):\n",
+    "    five_year  = \"[\"\n",
+    "    for year in salary_p[ID]:\n",
+    "        five_year += \" %.2f,\" % year\n",
+    "    five_year += \"]\"\n",
+    "    print(\"Employee Name      : \" + str(names[ID]))\n",
+    "    print(\"Employee Pay       : %.2f\" % salaries[ID] )\n",
+    "    print(\"Employee Five-Year : \" + five_year)\n",
+    "    print(\"Employee Bonus     : %.2f\" % bonus[ID])\n",
+    "    print(\"Employee Raise Pct : %.2f\" % raise_p[ID])\n",
+    "    print(\"Employee Benefit   : %.2f / 100\" % benefits[ID])\n",
+    "    print(\"Employee Retirement: \" + str(retire[ID]))\n",
+    "\n",
+    "lowest_compensated = find_min_location(scaled_benefits)\n",
+    "print_user(lowest_compensated, names, salaries, salary_p, bonus, retire, raise_p, scaled_benefits)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Task 10: Calculate the mean, median, and standard deviation of the two variables in your NumPy array.\n",
+    "----\n",
+    "\n",
+    "Finally, you end the day by printing some basic statistics about your employee dataset:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean of Salaries    : 80475.00\n",
+      "Median of Salaries  : 72950.00\n",
+      "Standard Deviation  : 31627.15\n",
+      "\n",
+      "Mean of Bonus       : 2575.00\n",
+      "Median of Bonus     : 1950.00\n",
+      "Standard Deviation  : 1594.33\n",
+      "\n",
+      "Mean of Raise Pct   : 2.00\n",
+      "Median of Raise Pct : 1.90\n",
+      "Standard Deviation  : 0.70\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Mean of Salaries    : %.2f\" % np.mean(salaries))\n",
+    "print(\"Median of Salaries  : %.2f\" % np.median(salaries))\n",
+    "print(\"Standard Deviation  : %.2f\\n\" % np.std(salaries))\n",
+    "\n",
+    "print(\"Mean of Bonus       : %.2f\" % np.mean(bonus))\n",
+    "print(\"Median of Bonus     : %.2f\" % np.median(bonus))\n",
+    "print(\"Standard Deviation  : %.2f\\n\" % np.std(bonus))\n",
+    "\n",
+    "print(\"Mean of Raise Pct   : %.2f\" % np.mean(raise_p))\n",
+    "print(\"Median of Raise Pct : %.2f\" % np.median(raise_p))\n",
+    "print(\"Standard Deviation  : %.2f\\n\" % np.std(raise_p))"
    ]
   },
   {
