--- a/0. 489_Homework_1.ipynb
+++ b/0. 489_Homework_1.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -245,24 +245,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[  91967.7          96582.9571       96246.8651133   100960.54301091\n",
-      "  100725.13550016]\n",
-      "[ 48720.          50650.8         50192.562       52145.45043\n",
-      "  51709.63218645]\n",
-      "[ 131840.         140995.2        139869.056      149265.12768\n",
-      "  148387.0815104]\n",
-      "[ 56672.          58752.064       58040.288768    60136.77223322\n",
-      "  59441.61350001]\n",
-      "[ 15500.  15700.  15500.  15700.  15500.]\n",
-      "[ 102410.          110218.45        111834.28025     120066.82286125\n",
-      "  122125.82989001]\n"
+      "[ 91967.7, 96582.9571, 96246.8651133, 100960.543011, 100725.1355,]\n",
+      "[ 48720.0, 50650.8, 50192.562, 52145.45043, 51709.6321864,]\n",
+      "[ 131840.0, 140995.2, 139869.056, 149265.12768, 148387.08151,]\n",
+      "[ 56672.0, 58752.064, 58040.288768, 60136.7722332, 59441.6135,]\n",
+      "[ 15500.0, 15700.0, 15500.0, 15700.0, 15500.0,]\n",
+      "[ 102410.0, 110218.45, 111834.28025, 120066.822861, 122125.82989,]\n"
      ]
     }
    ],
@@ -270,8 +265,12 @@
     "outlook_prediction = []\n",
     "for prediction in salary_p:\n",
     "    outlook_prediction.append(prediction)\n",
-    "for person_data in outlook_prediction:\n",
-    "    print(person_data)"
+    "for person_data in outlook_prediction:    # In the m*n matrix, this is m\n",
+    "    row  = \"[\"\n",
+    "    for item in person_data:              # In the m*n matrix, this is n\n",
+    "        row += \" \" + str(item) + \",\"\n",
+    "    row += \"]\"\n",
+    "    print(row)"
    ]
   },
   {
@@ -301,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +461,7 @@
      "output_type": "stream",
      "text": [
       "And the winner is: Jill!\n",
-      "They won: 3561.10 dollars!\n",
+      "They won: 3130.38 dollars!\n",
       "\n",
       "Jill has a bonus index of          : 33.55\n",
       "Jill has an average yearly cost of : 50683.69\n",
@@ -501,14 +500,14 @@
     "Task 9: Create a two-dimensional NumPy array and print a subset of its rows and columns\n",
     "----\n",
     "\n",
-    "So the boss sees that Jill has won 3561.10 and is feeling extra generous. He'd like to give the remaining 1438.9 to the person with the lowest bonus compensation percentile to try and spread the wealth. The boss requests that you locate that person and bring him their file.\n",
+    "So the boss sees that Jill has won 3561.10 and is feeling extra generous. He'd like to give the remaining 1869.62 to the person with the lowest bonus compensation percentile to try and spread the wealth. The boss requests that you locate that person and bring him their file.\n",
     "\n",
     "Note: The subset that's being printed is the row containing the lowest bonus earner, and all columns within the row being printed."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -563,24 +562,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean of Salaries    : 80475.00\n",
+      "Mean of Salaries    : 72566.67\n",
       "Median of Salaries  : 72950.00\n",
-      "Standard Deviation  : 31627.15\n",
+      "Standard Deviation  : 36866.27\n",
       "\n",
-      "Mean of Bonus       : 2575.00\n",
+      "Mean of Bonus       : 2283.33\n",
       "Median of Bonus     : 1950.00\n",
-      "Standard Deviation  : 1594.33\n",
+      "Standard Deviation  : 1617.01\n",
       "\n",
-      "Mean of Raise Pct   : 2.00\n",
+      "Mean of Raise Pct   : 2.25\n",
       "Median of Raise Pct : 1.90\n",
-      "Standard Deviation  : 0.70\n",
+      "Standard Deviation  : 1.21\n",
       "\n"
      ]
     }
