Updated with some useful definitions TeX

--- a/0. Notes on Statistical Experiments.ipynb
+++ b/0. Notes on Statistical Experiments.ipynb
@@ -164,6 +164,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "Simulated Dataset Definitions:\n",
+    "----\n",
+    "- $\\textbf{Dataset:}$ $y_1$, $y_2$, ..., $y_n$ ~ N($\\mu$, $\\sigma$) where $\\mu$ = 0 and $\\sigma$ = 1\n",
+    "\n",
+    "- $\\textbf{Hypothesis:}$ $H_0$:$\\mu$ = 0 vs. $H_{a}$: $\\mu$!= 0\n",
+    "\n",
+    "- $\\textbf{Test Statistic:}$ $\\frac{\\bar{y} - 0}{\\frac{s}{\\sqrt{n}}}$\n",
+    "\n",
+    "- $\\textbf{Sample Variance:}$ var($\\bar{y}$) = $\\frac{\\sigma^2}{n}$\n",
+    "\n",
+    "- $\\textbf{Standard Deviation:}$ sd($\\bar{y}$) = $\\frac{\\sigma}{n}$\n",
+    "\n",
+    "- $\\textbf{Sample Standard Deviation:}$ $\\hat{sd}$($\\bar{y}$) = $\\frac{\\hat{\\sigma}}{\\sqrt{n}}$ =  $\\frac{s}{\\sqrt{n}}$\n",
+    "\n",
+    "- $\\textbf{P-value:}$ Pr(|T-Statistic| $\\geq$ |observed T-statistic| when $H_0$ is true)\n",
+    "\n",
+    "- $\\textbf{Type-1 Error:}$ Incorrectly rejecting the $H_0$ is a type 1 error in statistics.\n",
+    "\n",
+    "- $\\textbf{Type-1 Error Rate:}$ $\\alpha$, the probability that given $H_0$ is true, we get a small enough p-value to reject $H_0$\n",
+    "\n",
+    "- $\\textbf{Type-2 Error:}$ Incorrectly accepting the $H_0$ is a type 2 error in statistics."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
