Implemented final fixes

--- a/4.1 489_Homework_2.ipynb
+++ b/4.1 489_Homework_2.ipynb
@@ -25,8 +25,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -38,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -46,17 +48,17 @@
      "output_type": "stream",
      "text": [
       "Gamma:\n",
-      "[[ 1.79722526  1.20137891  0.65172731  0.01697816  0.21273913]\n",
-      " [ 0.2706963   1.16002715  0.05033513  0.49403742  1.05551058]\n",
-      " [ 1.94914248  0.56853525  0.51708952  1.36284182  0.06338771]\n",
-      " [ 0.46702396  0.27705309  0.02588675  0.08280801  1.45206318]\n",
-      " [ 0.14322237  0.21427689  6.13247993  0.46920567  1.95117935]]\n",
+      "[[ 1.39166856  2.95022937  3.2152953   0.30580004  0.078118  ]\n",
+      " [ 1.8880772   0.56576729  0.31334158  0.55678298  0.24068433]\n",
+      " [ 1.24905435  0.70264868  2.44709946  0.9003395   0.45689789]\n",
+      " [ 0.72723502  0.40291857  0.1630274   0.08346973  0.29579881]\n",
+      " [ 0.06855272  1.91070313  1.22314052  1.3902951   3.47182825]]\n",
       "Standard:\n",
-      "[[ 0.01183736 -1.7544278  -0.71253037 -0.7834558   0.06995385]\n",
-      " [ 0.88423845 -0.5994952  -0.05254781  0.2516199  -1.86709008]\n",
-      " [ 1.38617501 -0.89413782 -0.7063221   1.44143815  0.46341997]\n",
-      " [-0.34453516  0.78109501  0.09506905 -0.90234608  0.3869368 ]\n",
-      " [ 1.28899579  0.85954198  0.48901115  1.7819353  -0.45715746]]\n"
+      "[[-1.31613006  1.63402001  1.52483261  1.97623751 -0.43204724]\n",
+      " [-1.58017785  0.92940386 -1.31208601  0.03152515 -1.56648048]\n",
+      " [-0.21385747 -0.12168759 -0.97892401 -1.08874484 -0.96293625]\n",
+      " [-0.69737994 -0.13680079  0.54844969 -0.00363674 -0.38587469]\n",
+      " [ 0.34392427 -1.54948076 -1.36669858 -0.81154387 -0.97039009]]\n"
      ]
     }
    ],
@@ -71,6 +73,7 @@
     "# Create the random data for both gamma and standard normals\n",
     "data_std = np.random.standard_normal((n, N))\n",
     "data_gam = np.random.gamma(1, 1, (n, N))\n",
+    "\n",
     "\n",
     "# Just showing the data is truly random\n",
     "print(\"Gamma:\")\n",
@@ -104,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "scrolled": false
@@ -138,27 +141,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "T-statistic:1.23254330145\n",
-      "P-value    :0.110332622635\n",
+      "T-statistic:-0.89555033342\n",
+      "P-value    :0.813667355585\n",
       "\n",
-      "T-statistic:-0.650494376126\n",
-      "P-value    :0.741560128541\n",
+      "T-statistic:-0.941714457856\n",
+      "P-value    :0.825684428964\n",
       "\n",
-      "T-statistic:-0.141347191855\n",
-      "P-value    :0.55605855261\n",
+      "T-statistic:-1.56741513407\n",
+      "P-value    :0.939895701209\n",
       "\n",
-      "T-statistic:0.440036604946\n",
-      "P-value    :0.330434895032\n",
+      "T-statistic:0.157791606109\n",
+      "P-value    :0.437471203585\n",
       "\n",
-      "T-statistic:-0.609329435351\n",
-      "P-value    :0.728149023141\n",
+      "T-statistic:0.624025877801\n",
+      "P-value    :0.267022950253\n",
       "\n"
      ]
     }
@@ -173,16 +176,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".05 p-value: 0.0534\n",
-      ".10 p-value: 0.1058\n",
-      ".15 p-value: 0.1536\n"
+      ".05 p-value: 0.0536\n",
+      ".10 p-value: 0.1064\n",
+      ".15 p-value: 0.1582\n"
      ]
     }
    ],
@@ -193,6 +196,7 @@
     "lt_15 = float(len([x for x in sim_pv if x < .15])) / N\n",
     "\n",
     "# As you can see, the p-values are pretty solid!\n",
+    "# Fixed: changed from one-sided to two-sided p-value.\n",
     "print(\".05 p-value: \" + str(lt_05))\n",
     "print(\".10 p-value: \" + str(lt_10))\n",
     "print(\".15 p-value: \" + str(lt_15))"
@@ -216,45 +220,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create an array for the CI tuples\n",
     "sim_ci = np.zeros((10, N, 2))\n",
     "\n",
-    "# Save computing power\n",
-    "n_sqrt = np.sqrt(n)\n",
-    "\n",
     "# Calculate 95% confidence intervals\n",
-    "for i in range(N):    \n",
-    "    for j in np.arange(10, 100, 10):\n",
-    "        sim_i        = data_gam[:j, i]               # Grab the i'th simualtion value\n",
-    "        x_bar_i      = np.mean(sim_i)                # Calculate the sample mean\n",
-    "        s_i          = np.std(sim_i)                 # Calculate the sample standard deviation\n",
-    "        sim_ci[j/10, i, 0] = x_bar_i - 1.96 * s_i / n_sqrt\n",
-    "        sim_ci[j/10, i, 1] = x_bar_i + 1.96 * s_i / n_sqrt"
+    "for j in np.arange(0, 100, 10):\n",
+    "    for i in range(N):\n",
+    "        sim_i        = data_gam[:(j+10), i]                  # Grab the i'th simualtion value\n",
+    "        x_bar_i      = np.mean(sim_i)                   # Calculate the sample mean\n",
+    "        s_i          = np.std(sim_i)                    # Calculate the sample standard deviation\n",
+    "        sim_ci[j/10, i, 0] = x_bar_i - 1.96 * s_i / np.sqrt((j+10))\n",
+    "        sim_ci[j/10, i, 1] = x_bar_i + 1.96 * s_i / np.sqrt((j+10))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10 sample percent covering Mu: 0.0\n",
-      "20 sample percent covering Mu: 0.4016\n",
-      "30 sample percent covering Mu: 0.5796\n",
-      "40 sample percent covering Mu: 0.6806\n",
-      "50 sample percent covering Mu: 0.7634\n",
-      "60 sample percent covering Mu: 0.8176\n",
-      "70 sample percent covering Mu: 0.8584\n",
-      "80 sample percent covering Mu: 0.8894\n",
-      "90 sample percent covering Mu: 0.9148\n",
-      "100 sample percent covering Mu: 0.9244\n"
+      "10 sample percent covering Mu: 0.8624\n",
+      "20 sample percent covering Mu: 0.893\n",
+      "30 sample percent covering Mu: 0.9128\n",
+      "40 sample percent covering Mu: 0.9246\n",
+      "50 sample percent covering Mu: 0.926\n",
+      "60 sample percent covering Mu: 0.9302\n",
+      "70 sample percent covering Mu: 0.93\n",
+      "80 sample percent covering Mu: 0.9318\n",
+      "90 sample percent covering Mu: 0.9364\n",
+      "100 sample percent covering Mu: 0.9366\n",
+      "0.857\n",
+      "0.8992\n",
+      "0.914\n",
+      "0.9234\n",
+      "0.9248\n",
+      "0.938\n",
+      "0.9332\n",
+      "0.9312\n",
+      "0.9346\n",
+      "0.942\n"
      ]
     }
    ],
@@ -265,17 +276,18 @@
     "    for j in range(N):\n",
     "        if(sim_ci[i, j, 0] < 1 and sim_ci[i, j, 1] > 1):\n",
     "            cvrg[i, j] = 1\n",
-    "    print(str((i+1)*10) + \" sample percent covering Mu: \" + str(np.mean(cvrg[i])))"
+    "    print(str((i+1)*10) + \" sample percent covering Mu: \" + str(np.mean(cvrg[i])))\n",
+    "    \n",
+    "# versus your code\n",
+    "for n in range(10, 101, 10):\n",
+    "    results = np.empty(5000)\n",
+    "    for i in range(0, 5000):\n",
+    "        rvs = stats.gamma.rvs(a=1, scale=1, size = n)\n",
+    "        upper = rvs.mean() + 1.96 * rvs.std() / np.sqrt(n) #Ahhhh! My n wasn't varying.\n",
+    "        lower = rvs.mean() - 1.96 * rvs.std() / np.sqrt(n)\n",
+    "        results[i] = upper > 1 and lower < 1\n",
+    "    print(results.mean())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
