Fixed issue with PCA Eigan Values

--- a/Unstructured Exploration of Data.ipynb
+++ b/Unstructured Exploration of Data.ipynb
@@ -963,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1187,7 +1187,7 @@
        "10 -0.496180  0.205633  0.093595  1.000000  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1207,24 +1207,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Eigan Value: 3.09913244067 Explained Variance: 2.81739312788 Discrepancy: 0.281739312788\n",
-      "Eigan Value: 1.9259096896 Explained Variance: 1.75082699055 Discrepancy: 0.175082699055\n",
-      "Eigan Value: 1.55054348877 Explained Variance: 1.4095849898 Discrepancy: 0.14095849898\n",
-      "Eigan Value: 1.21323253058 Explained Variance: 1.10293866416 Discrepancy: 0.110293866416\n",
-      "Eigan Value: 0.959292071346 Explained Variance: 0.872083701224 Discrepancy: 0.0872083701224\n",
-      "Eigan Value: 0.0595583119219 Explained Variance: 0.599643877154 Discrepancy: 0.540085565232\n",
-      "Eigan Value: 0.181333166568 Explained Variance: 0.530719290175 Discrepancy: 0.349386123607\n",
-      "Eigan Value: 0.344642116819 Explained Variance: 0.384506090598 Discrepancy: 0.0398639737794\n",
-      "Eigan Value: 0.422956699658 Explained Variance: 0.31331101529 Discrepancy: 0.109645684368\n",
-      "Eigan Value: 0.583791219193 Explained Variance: 0.164848333244 Discrepancy: 0.418942885949\n",
-      "Eigan Value: 0.659608264869 Explained Variance: 0.054143919929 Discrepancy: 0.60546434494\n"
+      "Eigan Value: 3.09913244067 Explained Variance: 3.09913244067 Discrepancy: 1.24344978758e-14\n",
+      "Eigan Value: 1.9259096896 Explained Variance: 1.9259096896 Discrepancy: 6.66133814775e-16\n",
+      "Eigan Value: 1.55054348877 Explained Variance: 1.55054348877 Discrepancy: 2.6645352591e-15\n",
+      "Eigan Value: 1.21323253058 Explained Variance: 1.21323253058 Discrepancy: 2.88657986403e-15\n",
+      "Eigan Value: 0.959292071346 Explained Variance: 0.959292071346 Discrepancy: 6.66133814775e-16\n",
+      "Eigan Value: 0.0595583119219 Explained Variance: 0.659608264869 Discrepancy: 0.600049952948\n",
+      "Eigan Value: 0.181333166568 Explained Variance: 0.583791219193 Discrepancy: 0.402458052625\n",
+      "Eigan Value: 0.344642116819 Explained Variance: 0.422956699658 Discrepancy: 0.0783145828392\n",
+      "Eigan Value: 0.422956699658 Explained Variance: 0.344642116819 Discrepancy: 0.0783145828392\n",
+      "Eigan Value: 0.583791219193 Explained Variance: 0.181333166568 Discrepancy: 0.402458052625\n",
+      "Eigan Value: 0.659608264869 Explained Variance: 0.0595583119219 Discrepancy: 0.600049952948\n"
      ]
     }
    ],
@@ -1233,10 +1233,10 @@
     "\n",
     "tuples = []\n",
     "for x in range(len(eig)):\n",
-    "    tuples.append((eig[x], pca[11].explained_variance_ratio_[x]))\n",
+    "    tuples.append((eig[x], pca[11].explained_variance_[x]))\n",
     "    \n",
     "for x in tuples:\n",
-    "    print(\"Eigan Value: \" + str(x[0]) + \" Explained Variance: \" + str(x[1]*10) + \" Discrepancy: \" + str(abs(x[0]-x[1]*10)))"
+    "    print(\"Eigan Value: \" + str(x[0]) + \" Explained Variance: \" + str(x[1]) + \" Discrepancy: \" + str(abs(x[0]-x[1])))\n"
    ]
   },
   {
